log
mi., 15 de feb. de 2023 12:35:23: 
 tests:  0|6
total_score: 0/70
7964391
Wed 29 Mar 2023 07:15:44 PM UTC: 
 tests:  0|6
total_score: 0/70
3e9a827
Thu 30 Mar 2023 01:52:42 AM UTC: 
 arraylist.c | 24 ++++++++++++++++--------
 1 file changed, 16 insertions(+), 8 deletions(-)
 tests:  0|6
total_score: 0/70
e08c053
Thu 30 Mar 2023 01:57:51 AM UTC: 
 arraylist.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
 tests:  0|6
total_score: 0/70
a97322d
Thu 30 Mar 2023 02:01:33 AM UTC: 
 arraylist.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
In file included from test.c:5:
arraylist.c: In function ‘createList’:
arraylist.c:18:31: error: ‘list’ undeclared (first use in this function); did you mean ‘lista’?
   18 |   lista->data = (int*) calloc(list->capacity, sizeof(int));
      |                               ^~~~
      |                               lista
arraylist.c:18:31: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
542465d
Thu 30 Mar 2023 02:01:40 AM UTC: 
 arraylist.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
arraylist.c: In function ‘createList’:
arraylist.c:18:15: error: assignment to ‘void **’ from incompatible pointer type ‘int *’ [-Werror=incompatible-pointer-types]
   18 |   lista->data = (int*) calloc(lista->capacity, sizeof(int));
      |               ^
cc1: all warnings being treated as errors
Compilation failed
fc6bb23
Thu 30 Mar 2023 02:02:49 AM UTC: 
 arraylist.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|6
total_score: 0/70
12e03d4
